@@ -21,3 +21,4 @@
 | -XX:CMSInitingOccupancyFraction |  设置CMS收集器在老年代空间被使用多少后触发垃圾收集，仅在使用CMS收集器时生效 | 默认值为68% |
 | -XX:UseCMSCompactAtFullCollection |  设置CMS收集器在完成垃圾收集后是否要进行一次内存碎片整理，仅在使用CMS收集器时生效 |
 | -XX:CMSFullGCsBeforeCompaction |  设置CMS收集器在进行若干次垃圾收集后再启动一次内存碎片整理。仅在使用CMS收集器时生效 |
+| -XX:-UseBiasedLocking | 是否启用偏向锁 | Java 6 和Java 7默认启用 |
